# rectangles-game

./: pyproject.toml
src/game/: config.py  main.py  trial_1.py
src/game/objects/: __init__.py  basic.py  other.py  player.py
