[tool.poetry]
name = "game"
version = "0.0.1"
description = ""
authors = ["Ludwik Bielczynski <ludwik.bielczynski@gmail.com>"]
readme = "README.md"
packages = [{"include" = "game", "from" = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.0"
numpy = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
